Issue EnvironmentVaultConfiguration_does_not_check_for_spring.cloud_prefix_by_default_842: Update getProperties configuration to search a list of root path for the keys, so when people follow random instructions it just works.